syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";
// DO NOT REMOVE THE COMMENTS
// BEGIN GENERATED
// HunterTalents message.
message HunterTalents {
    bool posthaste = 1;
    bool narrow_escape = 2;
    bool crouching_tiger_hidden_chimera = 3;
    bool binding_shot = 4;
    bool wyvern_sting = 5;
    bool intimidation = 6;
    bool exhilaration = 7;
    bool aspect_of_the_iron_hawk = 8;
    bool spirit_bond = 9;
    bool fervor = 10;
    bool dire_beast = 11;
    bool thrill_of_the_hunt = 12;
    bool a_murder_of_crows = 13;
    bool blink_strikes = 14;
    bool lynx_rush = 15;
    bool glaive_toss = 16;
    bool powershot = 17;
    bool barrage = 18;
}

enum HunterMajorGlyph {
    HunterMajorGlyphNone = 0;
    GlyphOfCamouflage = 42898;
    GlyphOfLiberation = 42899;
    GlyphOfMending = 42900;
    GlyphOfDistractingShot = 42901;
    GlyphOfEndlessWrath = 42902;
    GlyphOfDeterrence = 42903;
    GlyphOfDisengage = 42904;
    GlyphOfFreezingTrap = 42905;
    GlyphOfIceTrap = 42906;
    GlyphOfMisdirection = 42907;
    GlyphOfExplosiveTrap = 42908;
    GlyphOfAnimalBond = 42909;
    GlyphOfNoEscape = 42910;
    GlyphOfPathfinding = 42911;
    GlyphOfSnakeTrap = 42913;
    GlyphOfAimedShot = 42914;
    GlyphOfMendPet = 42915;
    GlyphOfSolace = 42917;
    GlyphOfChimeraShot = 45625;
    GlyphOfTranquilizingShot = 45731;
    GlyphOfMastersCall = 45733;
    GlyphOfScatterShot = 45734;
    GlyphOfMirroredBlades = 45735;
    GlyphOfBlackIce = 85684;
    GlyphOfTheLeanPack = 104270;
    GlyphOfEnduringDeceit = 104276;
}

enum HunterMinorGlyph {
    HunterMinorGlyphNone = 0;
    GlyphOfAspects = 42897;
    GlyphOfTameBeast = 42912;
    GlyphOfRevivePet = 43338;
    GlyphOfLesserProportion = 43350;
    GlyphOfFireworks = 43351;
    GlyphOfAspectOfThePack = 43355;
    GlyphOfStampedeHunter = 43356;
    GlyphOfAspectOfTheCheetah = 45732;
    GlyphOfAspectOfTheBeast = 85683;
    GlyphOfDirection = 87278;
    GlyphOfMarking = 87279;
    GlyphOfFetch = 87393;
    GlyphOfFocusedFire = 104274;
    GlyphOfChameleon = 104278;
}

// END GENERATED

enum PetSpec {
	Ferocity = 0;
	Tenacity = 1;
	Cunning = 2;
}

enum HunterStingType {
	NoSting = 0;
	ScorpidSting = 1;
	SerpentSting = 2;
}

message HunterOptions {
	enum PetType {
		PetNone        = 0;
		Bat            = 1;
		Bear           = 2;
		BirdOfPrey     = 3;
		Boar           = 4;
		CarrionBird    = 5;
		Cat            = 6;
		Chimaera       = 7;
		CoreHound      = 8;
		Crab           = 9;
		Crocolisk      = 10;
		Devilsaur      = 11;
		Dragonhawk     = 12;
		Gorilla        = 13;
		Hyena          = 14;
		Moth           = 15;
		NetherRay      = 16;
		Raptor         = 17;
		Ravager        = 18;
		Rhino          = 19;
		Scorpid        = 20;
		Serpent        = 21;
		Silithid       = 22;
		Spider         = 23;
		SpiritBeast    = 24;
		SporeBat       = 25;
		Tallstrider    = 26;
		Turtle         = 27;
		WarpStalker    = 28;
		Wasp           = 29;
		WindSerpent    = 30;
		Wolf           = 31;
		Worm           = 32;
		ShaleSpider    = 33;
		Fox            = 34;

		// new additions in MoP
		Goat           = 35;
		Porcupine      = 36;
		Monkey         = 37;
		Basilisk       = 38;
		Crane          = 39;
		Dog            = 40;
		Beetle         = 41;
		Quilen         = 42;
		WaterStrider   = 43;
	}

	PetType pet_type = 2;

	PetSpec pet_spec = 3;
	double pet_uptime = 4;
	double time_to_trap_weave_ms = 5;
	bool use_hunters_mark = 6;
	bool use_aq_tier = 7;
	bool use_naxx_tier = 8;
}

message BeastMasteryHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}

message MarksmanshipHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool trap_weave = 1;

		// Switch to Aspect of the Viper when mana goes below this percent.
		double viper_start_mana_percent = 6;
		// Switch back to Aspect of the Hawk when mana goes above this percent.
		double viper_stop_mana_percent = 7;

		// Allow use of Explosive Shot Rank 3 during LNL procs.
		bool allow_explosive_shot_downrank = 10;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}

message SurvivalHunter {
	message Rotation {
		RotationType type = 9;
		HunterStingType sting = 5;

		bool multi_dot_serpent_sting = 11;
	}
	message Options {
		HunterOptions class_options = 1;
	}
	Options options = 1;
}
